--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         body {
             margin: 0;
             overflow: hidden;
+            background-image: url('https://www.desktopbackground.org/p/2010/04/26/7772_smb1-nes-hills-long-backgrounds-pack-super-mario-bros-x-forums_1600x800_h.gif');
         }
     </style>
 </head>
